# FixMyRoad-BE

./: .gitignore  README.md  nam
build-docker/: .env  (+3 more)
image_model/: pyproject.toml
image_model/yolo/: convert_annotations.py  test_yolo.py  train_yolo.py
webapp/: .env.example  .gitignore  manage.py  package.json  pyproject.toml  requirements.txt  token.sh
webapp/_algorithms/: __init__.py  cluster_reports.py  dbscan.py  model_weights.npz
webapp/_algorithms/signals/: __init__.py  cluster.py
webapp/_algorithms/utils/: __init__.py  cnn_classifer.py  haversine.py
webapp/_auth/: urls.py
webapp/_auth/views/: __init__.py  email.py
webapp/_gatekeeper/: apps.py
webapp/_gatekeeper/urls/: __init__.py
webapp/_user/: admin.py  apps.py
webapp/_user/migrations/: 0001_initial.py  0002_user_is_superuser_alter_user_date_joined.py  0003_user_groups_user_user_permissions.py  0004_userprofile.py  0005_user_role_alter_userprofile_address_and_more.py  0006_userprofile_ward.py  0007_alter_userprofile_user.py  0008_alter_userprofile_ward.py
webapp/_user/models/: __init__.py  me.py  user.py
webapp/_user/urls/: __init__.py  me.py  user.py
webapp/_user/views/: __init__.py  create.py  delete.py  list.py  retrieve.py  update.py
webapp/base/enums/: __init__.py  cluster.py  report.py  user.py
webapp/cluster/: urls.py
webapp/comment/: urls.py
webapp/core/: urls.py  wsgi.py
webapp/news/: urls.py
webapp/report/: admin.py  apps.py  urls.py
webapp/swagger/: urls.py
webapp/utils/: __init__.py  email.py  email_token.py  pagination.py
webapp/ward/: admin.py  urls.py
(+145 files in other folders)
